# Image-Processing-and-Data-compression

./: .gitignore  CMakeLists.txt  Doxyfile  EntropyCalculator.h  README.md  audioHistAndEntropy.cpp  wavCopy.cpp  wav_copy.cpp
ExtraMile/: CMakeLists.txt  README.md
ExtraMile/includes/: BitStream.hpp  Golomb.h  GolombVideo.h  LosslessJPEGPredictors.hpp  VideoCoder.hpp  VideoDecoder.hpp  extraMile.hpp
ExtraMile/src/: BitStream.cpp  Extra.cpp  Golomb.cpp  GolombVideo.cpp  LosslessJPEGPredictors.cpp  VideoCoder.cpp  VideoDecoder.cpp  extraMile.cpp
ExtraMile/videos/: ducks420_120s.avi  input5s.avi
audio/: audioEntropy.cpp  audioSNR.cpp  uni_scalar_quant.cpp  wavCopy.cpp
audioAndImageOrVideoManipulation/: CMakeLists.txt  EntropyCalculator.h  README.md  requirements.txt
audioAndImageOrVideoManipulation/audio/: audioEntropy.cpp  audioSNR.cpp  wavCopy.cpp
audioAndImageOrVideoManipulation/includes/: AudioReader.hpp  EntropyCalculator.hpp  KmeansLib.hpp  SNRlib.hpp
audioAndImageOrVideoManipulation/src/: EntropyCalculator.cpp
audioAndImageOrVideoManipulation/src/audio/: AudioReader.cpp  SNRlib.cpp  audioEntropy.cpp  audioSNR.cpp  plotHist.py  uni_scalar_quant.cpp  wavCopy.cpp
audioAndImageOrVideoManipulation/src/video/: KmeansLib.cpp  akiyo_qcif_blur.y4m  copy.cpp  display.cpp  kmeans.cpp  videoEntropy.cpp  videoSNR.cpp
audioAndImageOrVideoManipulation/video/: kmeans.cpp
audioAndImageOrVideoManipulation/wav_files/: addnoise.m
audioCoding/: CMakeLists.txt  README.md  plotHist.py
audioCoding/includes/: AudioDecoder.hpp  AudioEncoder.hpp  AudioReader.hpp  BitStream.h  BitStream.hpp  EntropyCalculator.hpp  EntropyEncoder.h  Golomb.h
audioCoding/results/: compare.txt
audioCoding/src/: AudioCodec.cpp  AudioDecoder.cpp  AudioEncoder.cpp  BitStream.cpp  EntropyCalculator.cpp  EntropyEncoder.cpp  Golomb.cpp  entropyEncoder.cpp
audioCoding/test/: testBitStream.cpp  testGolomb.cpp
docs/: Doxyfile
docs/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  EntropyCalculator_8h.html  EntropyCalculator_8h__dep__incl.map  EntropyCalculator_8h__dep__incl.md5  EntropyCalculator_8h__incl.map  EntropyCalculator_8h__incl.md5  EntropyCalculator_8h_source.html  README_8md.html  README_8md_source.html  _entropy_calculator_8h_source.html  addnoise_8m.html  addnoise_8m_source.html  animation_8cpp.html  animation_8cpp__incl.map  animation_8cpp__incl.md5  animation_8cpp_source.html  annotated.html  annotated_dup.js  audioEntropy_8cpp.html  audioEntropy_8cpp__incl.map  audioEntropy_8cpp__incl.md5  audioEntropy_8cpp_source.html  audioSNR_8cpp.html  audioSNR_8cpp__incl.md5  audioSNR_8cpp_source.html  bar_8cpp.html  bar_8cpp__incl.md5  bar_8cpp_source.html  basic_8cpp.html  basic_8cpp_source.html  classEntropyCalculator-members.html  classEntropyCalculator.html  class_entropy_calculator.html  classes.html  classmatplotlibcpp_1_1Plot-members.html  classmatplotlibcpp_1_1Plot.html  classmatplotlibcpp_1_1_plot.html  (+201 more)
docs/html/search/: all_0.js  all_1.js  all_12.js  all_13.js  all_15.js  all_3.js  all_5.js  all_7.js  all_9.js  all_c.js  all_d.js  classes_1.js  classes_3.js  defines_0.js  (+41 more)
entropyCoding/: CMakeLists.txt  README.md
entropyCoding/includes/: BitStream.h  BitStream.hpp  Golomb.h
entropyCoding/src/: BitStream.cpp  Golomb.cpp
entropyCoding/test/: encoded  encoded_m7  testBitStream.cpp  testGolomb.cpp  testReadBits.txt  testWriteNBits  testWriteNBits.txt  testsBitStream.hpp  testsBitStreamMain.cpp  testsGolomb.hpp  testsGolombMain.cpp
html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  README_8md.html  addnoise_8m.html  animation_8cpp.html  annotated.html  audioEntropy_8cpp.html  audioEntropy_8cpp__incl.map  audioEntropy_8cpp__incl.md5  audioSNR_8cpp.html  audioSNR_8cpp__incl.map  bar_8cpp.html  bar_8cpp__incl.map  basic_8cpp.html  basic_8cpp__incl.map  basic_8cpp__incl.md5  classes.html  classmatplotlibcpp_1_1Plot.html  colorbar_8cpp.html  colorbar_8cpp__incl.md5  copy_8cpp.html  dir_000000_000006.html  dir_2d76f554e788dc2badb75f208946efa3.html  dir_2d76f554e788dc2badb75f208946efa3_dep.map  dir_2d76f554e788dc2badb75f208946efa3_dep.md5  dir_44ea9ed243d3740341f2efeb45271ac4.html  dir_4c29f6c5e99ca759d1475628ee9d55fb.html  dir_597f6a792ff7cba98dd4f9f2210b5255.html  dir_9c701f4b9a76d23ccc72b5c18d781c43.html  dir_a5f32cf82ad289a7dac212f63f40f55b.html  dir_a5f32cf82ad289a7dac212f63f40f55b_dep.md5  dir_f89abcb304c928c7d889aa5625570de5.html  dir_fd2d02bd7630aad15b4d041385a7b884.html  dir_fd2d02bd7630aad15b4d041385a7b884_dep.map  display_8cpp.html  display_8cpp__incl.map  display_8cpp__incl.md5  files.html  fill_8cpp.html  fill_8cpp__incl.map  (+126 more)
html/search/: all_10.js  all_11.js  all_12.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_6.js  defines_4.js  files_6.js  files_8.js  files_9.js  files_a.js  functions_11.js  functions_12.js  functions_2.js  functions_6.js  functions_9.js  functions_a.js  functions_e.js  namespaces_0.js  searchdata.js  variables_0.js  variables_6.js  variables_7.js  variables_a.js  variables_b.js  variables_c.js
video/: copy.cpp  display.cpp  hist.py  kmeans.cpp  videoEntropy.cpp
videoCoding/: CMakeLists.txt  README.md  plotHist.py
videoCoding/includes/: BaselineJPEG.hpp  BitStream.hpp  Golomb.h  HuffmanCode.hpp  HuffmanDecoder.hpp  JPEGQuantization.hpp  LosslessJPEGPredictors.hpp  VideoBitStream.hpp  VideoCodec.hpp  VideoDecoder.hpp  VideoEncoder.hpp  VideoReader.hpp  naive-dct.hpp
videoCoding/src/: BaselineJPEG.cpp  BitStream.cpp  Extra.cpp  Golomb.cpp  HuffmanCode.cpp  HuffmanDecoder.cpp  JPEGQuantization.cpp  LosslessJPEGPredictors.cpp  QuantizationJPEG.cpp  VideoBitStream.cpp  VideoCodec.cpp  VideoDecoder.cpp  VideoEncoder.cpp  VideoReader.cpp  codec.cpp  naive-dct.cpp  testBaseline.cpp  testdecoder.cpp  testvideo.cpp
videoCoding/test/: testQuantization.hpp  testQuantizationMain.cpp  testdecoder.cpp
videoCoding/videos/: akiyo420_5frames.y4m
